package-parser: Fix URL creation.